fixed background height on mobile

--- a/src/styles/pages/Home.module.css
+++ b/src/styles/pages/Home.module.css
@@ -33,5 +33,11 @@
         flex:none;     
     } 
 }
+
+@media (orientation: landscape) {
+    .container {                               
+        height: auto;
+    } 
+}
   
   
